# masters-ai

./: hello.py  pyproject.toml
01 - LLM, tokens, prompting, n-shot, grounding/: README.md
02 - LLM API with Python, token streaming/: blog-post.md  main.py
03 - DALLE-3 + API/: main.py
04 - Whisper API + local installation/: main.py  transcription.txt
05 - OpenAI code interpreter, chat with data/: README.md
07 - OpenAI functions. Building an agent/: README.md  main.py
08  - Streamlit and prototyping/: README.md
11  - Capstone project/: README.md
12 - Capstone Art/: README.md
13 - Advanced Generative AI Capstone/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
13 - Advanced Generative AI Capstone/chroma/: database.py
13 - Advanced Generative AI Capstone/trello/: trello_api.py
